--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Radio Blackout</string>
+    <string name="radio_feed_url">http://radioblackout.org/feed/</string>
 </resources>
